# dynamic-sanmei

./: .commitlintrc.yaml  .cursorrules  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Justfile  README.md  pyproject.toml
.claude/: settings.json
.claude/pdca/: cycle-20260301-220000.md  cycle-20260302-100000.md  cycle-20260302-120000.md  cycle-20260302-200000.md  cycle-20260302-domain-audit.md  cycle-20260302-saikan-display.md  cycle-20260302-sanmei-cli-display.md  cycle-20260302-sanmei-cli-docs.md  cycle-20260302-star-fix.md  cycle-20260302-zoukan-display.md  cycle-20260302-zoukan-sanmeigaku.md  cycle-20260304-taiun-display.md  cycle-20260304-taiun-shiki.md
00/e4ab0e65e4/: metadata.json
14/9e75ebd994/: metadata.json
18/0d0c33ff98/: metadata.json
1a/4ebc954284/: metadata.json
1a/dd03dd1bcb/: metadata.json
1e/1bdcd961ac/: metadata.json
28/5b88737cc0/: metadata.json
30/1cca5c9740/: metadata.json
37/eeb520bc1b/: metadata.json
3b/4a2b170dbf/: metadata.json
43/bf22f55ade/: metadata.json
47/247427ed94/: metadata.json
4e/9c09dbbd56/: metadata.json
51/87c457db9f/: metadata.json
58/bdcf3e2501/: metadata.json
5b/060c3d917d/: metadata.json
5c/0311c78088/: metadata.json
5c/137cbc0c7d/: metadata.json
60/ee4f04e804/: metadata.json
64/5697551c49/: metadata.json
65/78e76b124c/: metadata.json
66/559269ec4f/: metadata.json
69/bec81140a0/: metadata.json
6f/b053e76114/: metadata.json
73/94346e53f5/: metadata.json
7c/197aba9f79/: metadata.json
7e/08b7c8d0d6/: metadata.json
85/6ca1cd80a0/: metadata.json
88/4015c1de9d/: metadata.json
8b/18d9a6dc5f/: metadata.json
93/5d07f6096d/: metadata.json
apps/sanmei-cli/: CLAUDE.md  README.md  pyproject.toml
apps/sanmei-cli/src/sanmei_cli/: __init__.py  main.py  types.py
apps/sanmei-cli/src/sanmei_cli/commands/: compatibility.py  isouhou.py  meishiki.py  nenun.py  taiun.py  taiun_shiki.py
apps/sanmei-cli/src/sanmei_cli/formatters/: json_fmt.py  text.py
apps/sanmei-cli/tests/: conftest.py  test_compatibility_cmd.py  test_gender_type.py  test_isouhou_cmd.py  test_json_formatter.py  test_main.py  test_meishiki_cmd.py  test_nenun_cmd.py  test_taiun_cmd.py  test_taiun_shiki_cmd.py  test_text_formatter.py
(+260 files in other folders)
