[project]
name = "dynamic-sanmei"
version = "0.1.0"
description = "動的オントロジーを基盤とした算命学プラットフォーム"
requires-python = ">=3.14"

[tool.uv.workspace]
members = [
    "packages/*",
    "services/*",
]

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "S", "B"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S"]

[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
