[project]
name = "dynamic-sanmei"
version = "0.1.0"
description = "動的オントロジーを基盤とした算命学プラットフォーム"
requires-python = ">=3.14"

[tool.uv.workspace]
members = [
    "packages/*",
    "services/*",
    "apps/*",
]

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "S", "B"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S"]

[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "packages/sanmei-core/src:packages/dynamic-ontology/src:apps/sanmei-cli/src"

[[tool.mypy.overrides]]
module = "dynamic_ontology.domain.services.query_builder"
warn_return_any = false

[[tool.mypy.overrides]]
module = "dynamic_ontology.adapters.api.dependencies"
warn_return_any = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
