[project]
name = "sanmei-cli"
version = "0.1.0"
description = "算命学CLI - 開発者向け動作確認ツール"
requires-python = ">=3.14"
dependencies = [
    "click>=8.1.0",
    "sanmei-core",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sanmei_cli"]

[project.scripts]
sanmei = "sanmei_cli.main:cli"

[tool.uv.sources]
sanmei-core = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
